labs/examples/design-patterns-examples/src/com/examples/design/solid/o/bad/Rectangle.java
package com.examples.design.solid.o.bad;

public class Rectangle extends Shape {
    Rectangle() {
        super.m_type=1;
    }
}
